# deckflow

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE_IMPROVEMENTS.md  Makefile  README.md  bootstrap_test.html  cleanup_test_decks.py  docker-compose.monitoring.yml  pyproject.toml  run_tests.py  sample.html  start-monitoring.sh  streamlit_app.py  temp.py  test_file.txt
.claude/: settings.local.json
.github/workflows/: main.yml
app/: logging.py  main.py  metrics.py
app/adapter/: factory.py
app/adapter/db/: __init__.py  (+3 more)
app/api/: __init__.py  common.py  deck.py  deck_v2.py  files.py  health.py  preferences.py  schema.py  styles.py
app/assets/: bootstrap-styles.css  package-lock.json  package.json  tailwind.config.js
app/core/: config.py  llm.py  logging.py
app/models/: enums.py  schema.py  types.py
app/prompts/: deck_plan.py  layout_select.py  slide_render.py  template_summary.py
app/service/: export_deck.py  file_processor.py  generate_deck.py  modify_slide.py
app/services/: deck_service.py  models.py
asset/call_to_action/: template.html  template1.html  template2.html  template3.html  template_1.html  template_2.html  template_3.html
asset/comparison/: template.html  template1.html  template2.html  template3.html  template_1.html  template_2.html  template_3.html
asset/content_slide/: template.html  template1.html  template2.html  template3.html  template_1.html  template_2.html  template_3.html
asset/data_visual/: template.html  template1.html  template2.html  template3.html  template_1.html  template_2.html  template_3.html
asset/feature_showcase/: template.html  template1.html  template2.html  template3.html  template_1.html  template_2.html  template_3.html
tests/: builders.py  conftest.py
(+122 files in other folders)
