[project]
name = "deckflow"
version = "0.1.0"
description = "AI-powered presentation generator"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "python-multipart>=0.0.6",
    "langchain-community>=0.3.29",
    "litellm>=1.76.2",
    "langchain-litellm>=0.2.2",
    "redis>=6.4.0",
    "structlog>=25.4.0",
    "pre-commit>=4.3.0",
    "black>=25.1.0",
    "ruff>=0.12.11",
    "mypy>=1.17.1",
    "streamlit>=1.49.1",
    "langchain-openai>=0.3.32",
    "aiosqlite>=0.21.0",
    "weasyprint>=66.0",
    "playwright>=1.55.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.mypy]
python_version = "3.13"
check_untyped_defs = true
disallow_untyped_defs = true
warn_return_any = true
warn_unused_configs = true
no_implicit_optional = true

[dependency-groups]
dev = [
    "ruff>=0.12.11",
]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests",
]
